<resources>
    <string name="InfoPopupText">To Do\nbeta version 2017.07.25\nby
Trevin Beattie\n\nThis program is distributed under the terms of the
Gnu Public License, version 3.0.\nEncryption code in this program is
derived from the Legion of the Bouncy Castle Inc under an MIT style
license.  (See below.).\nSome of the images used by this program are
reproduced from work created and shared by the Android Open Source
Project and used according to the terms described in the Creative
Commons 2.5 Attribution License.\nOther images used by this program
were created by Trevin Beattie and are shared according to the terms
described in the Creative Commons 3.0 Attribution-ShareAlike
License.\n\n[Encryption code] Copyright © 2000-2013 The Legion of the
Bouncy Castle Inc. (http://www.bouncycastle.org)\nPermission is
hereby granted, free of charge, to any person obtaining a copy of this
software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the
rights to use, copy, modify, merge, publish, distribute, sublicense,
and/or sell copies of the Software, and to permit persons to whom the
Software is furnished to do so, subject to the following conditions:\n
The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.\nTHE
SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS
OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n</string>
    <string name="about">About&#8230;</string>
    <string name="app_name">To Do</string>
    <string name="service_name_alarm">Alarm Service</string>
    <string name="service_name_export">Export Service</string>
    <string name="service_name_import_palm">Import Service (Palm)</string>
    <string name="service_name_import_xml">Import Service (XML)</string>
    <string name="service_name_password_change">Change Password Service</string>
    <string name="AlarmButtonCancel">Cancel</string>
    <string name="AlarmButtonOK">OK</string>
    <string name="AlarmTextAlarm">Alarm</string>
    <string name="AlarmTextDaysEarlier">days earlier</string>
    <string name="AlarmTextTime">Alarm Time:</string>
    <string name="AlarmTextNextAlarm">Next alarm:</string>
    <string name="AlarmTitle">Alarm</string>
    <string name="Category_All">All</string>
    <string name="Category_Edit">Edit categories&#8230;</string>
    <string name="Category_Unfiled">Unfiled</string>
    <string-array name="CategoryFilterList">
	<item>@string/Category_All</item>
	<item>@string/Category_Unfiled</item>
    </string-array>
    <string name="CategoryListButtonCancel">Cancel</string>
    <string name="CategoryListButtonNew">New</string>
    <string name="CategoryListButtonOK">OK</string>
    <string name="ConfirmationTextDeleteNote">Are you sure you wish to delete this note?</string>
    <string name="ConfirmationTextDeleteToDo">Delete this To Do item?</string>
    <string name="ConfirmationButtonCancel">Cancel</string>
    <string name="ConfirmationButtonOK">OK</string>
    <string name="DatePickerCancel">Cancel</string>
    <string name="DatePickerFri">F</string>
    <string name="DatePickerMon">M</string>
    <string name="DatePickerSat">S</string>
    <string name="DatePickerSun">S</string>
    <string name="DatePickerTitleDueDate">Due Date</string>
    <string name="DatePickerTitleEndingOn">Ending On</string>
    <string name="DatePickerThu">T</string>
    <string name="DatePickerToday">Today</string>
    <string name="DatePickerTue">T</string>
    <string name="DatePickerWed">W</string>
    <string name="DetailButtonCancel">Cancel</string>
    <string name="DetailButtonDelete">Delete&#8230;</string>
    <string name="DetailButtonOK">OK</string>
    <string name="DetailNotset">None</string>
    <string name="DetailTextAlarm">Alarm:</string>
    <string name="DetailTextCategory">Category:</string>
    <string name="DetailTextCompleted">Completed:</string>
    <plurals name="DetailTextDaysEarlier">
	<item quantity="one">%d day earlier</item>
	<item quantity="other">%d days earlier</item>
    </plurals>
    <string name="DetailTextDueDate">Due date:</string>
    <string name="DetailTextHideUntil">Hide until:</string>
    <string name="DetailTextPriority">Priority:</string>
    <string name="DetailTextPrivate">Private:</string>
    <string name="DetailTextRepeat">Repeat:</string>
    <string name="DialogConfirmPassword">Repeat:</string>
    <string name="DialogEnterPassword">Password:</string>
    <string name="DialogExportTo">Data will be written to:&#10;%s</string>
    <string name="DialogNewPassword">New password:</string>
    <string name="DialogOldPassword">Old password:</string>
    <string name="DialogShowPassword">Show password</string>
    <string-array name="DueDateFormatList">
	<item>@string/DueDateFormatToday</item>
	<item>@string/DueDateFormatTomorrow</item>
	<item>@string/DueDateFormatDayOfWeek</item>
	<item>@string/DueDateFormatDayOfWeek</item>
	<item>@string/DueDateFormatDayOfWeek</item>
	<item>@string/DueDateFormatDayOfWeek</item>
	<item>@string/DueDateFormatDayOfWeek</item>
	<item>@string/DueDateFormatNextWeek</item>
    </string-array>
    <string name="DueDateFormatDayOfWeek">M/d &#8211; EEEE</string>
    <string name="DueDateFormatNextWeek">M/d &#8211; \'In 1 week\'</string>
    <string name="DueDateFormatToday">M/d &#8211; \'Today\'</string>
    <string name="DueDateFormatTomorrow">M/d &#8211; \'Tomorrow\'</string>
    <string name="DueDateNoDate">No Date</string>
    <string name="DueDateOther">Choose Date&#8230;</string>
    <string name="ErrorDescriptionBlank">The item description is empty.</string>
    <string name="ErrorCannotFind">Cannot find %s</string>
    <string name="ErrorCategoryID">The category is invalid.</string>
    <string name="ErrorExportCantMkdirs">Cannot create directory %s</string>
    <string name="ErrorExportFailed">Export failed</string>
    <string name="ErrorFailedToAddRecords">Failed to add records</string>
    <string name="ErrorFileNotFound">File not found</string>
    <string name="ErrorImportCantRead">Cannot read file %s</string>
    <string name="ErrorImportFailed">Import failed</string>
    <string name="ErrorImportNotFound">Import file %s not found</string>
    <string name="ErrorNoRecordsImported">No records were imported</string>
    <string name="ErrorNotImplemented">Not yet implemented</string>
    <string name="ErrorPasswordMismatch">New passwords do not match.</string>
    <string name="ErrorPriority">The priority is invalid.</string>
    <string name="ErrorSDNotFound">Storage media not found</string>
    <string name="ExportButtonCancel">Cancel</string>
    <string name="ExportButtonOK">Export</string>
    <string name="ExportTextFile">File:</string>
    <string name="ExportTextIncludePrivate">Include Private:</string>
    <string name="ExportTextPasswordNotSetWarning">No password has been entered in Settings.  Encrypted records will not be exported!</string>
    <string name="HideButtonCancel">Cancel</string>
    <string name="HideButtonOK">OK</string>
    <string name="HideTextHide">Hide until</string>
    <string name="HideTextDaysEarlier">days earlier</string>
    <string name="HideTextShow">Show after:</string>
    <string name="HideTitle">Hide when not yet due</string>
    <string name="ImportButtonCancel">Cancel</string>
    <string name="ImportButtonOK">Import</string>
    <string name="ImportTextFile">File:</string>
    <string name="ImportTextImportType">Import Type:</string>
    <string name="ImportTextIncludePrivate">Include Private:</string>
    <string name="ImportTextPassword">Saved Password:</string>
    <string name="ImportTextPasswordNotSetWarning">No password has been entered in Settings.  Private records will not be encrypted!</string>
    <string name="ImportTextShowPassword">Show Password:</string>
    <string-array name="ImportTypeList">
	<item>Clean</item>
	<item>Overwrite</item>
	<item>Update</item>
	<item>Merge</item>
	<item>Add</item>
	<item>Test</item>
    </string-array>
    <string name="InfoButtonOK">OK</string>
    <string name="ListButtonNew">New</string>
    <string name="ListDueDateFormat">M/d</string>
    <string name="MenuExport">Export Data</string>
    <string name="MenuImport">Import Data</string>
    <string name="MenuInfo">About&#8230;</string>
    <string name="MenuSettings">Settings</string>
    <string name="MenuShowCompleted">Toggle Show Completed</string>
    <string name="MenuPasswordSet">Set Password</string>
    <string-array name="MonList">
	<item>@string/MonthJan</item>
	<item>@string/MonthFeb</item>
	<item>@string/MonthMar</item>
	<item>@string/MonthApr</item>
	<item>@string/MonthMay</item>
	<item>@string/MonthJun</item>
	<item>@string/MonthJul</item>
	<item>@string/MonthAug</item>
	<item>@string/MonthSep</item>
	<item>@string/MonthOct</item>
	<item>@string/MonthNov</item>
	<item>@string/MonthDec</item>
    </string-array>
    <string-array name="MonthList">
	<item>@string/MonthJanuary</item>
	<item>@string/MonthFebruary</item>
	<item>@string/MonthMarch</item>
	<item>@string/MonthApril</item>
	<item>@string/MonthMay</item>
	<item>@string/MonthJune</item>
	<item>@string/MonthJuly</item>
	<item>@string/MonthAugust</item>
	<item>@string/MonthSeptember</item>
	<item>@string/MonthOctober</item>
	<item>@string/MonthNovember</item>
	<item>@string/MonthDecember</item>
    </string-array>
    <string name="MonthApr">Apr</string>
    <string name="MonthApril">April</string>
    <string name="MonthAug">Aug</string>
    <string name="MonthAugust">August</string>
    <string name="MonthDec">Dec</string>
    <string name="MonthDecember">December</string>
    <string name="MonthFeb">Feb</string>
    <string name="MonthFebruary">February</string>
    <string name="MonthJan">Jan</string>
    <string name="MonthJanuary">January</string>
    <string name="MonthJul">Jul</string>
    <string name="MonthJuly">July</string>
    <string name="MonthJun">Jun</string>
    <string name="MonthJune">June</string>
    <string name="MonthMar">Mar</string>
    <string name="MonthMarch">March</string>
    <string name="MonthMay">May</string>
    <string name="MonthNov">Nov</string>
    <string name="MonthNovember">November</string>
    <string name="MonthOct">Oct</string>
    <string name="MonthOctober">October</string>
    <string name="MonthSep">Sep</string>
    <string name="MonthSeptember">September</string>
    <string name="NoteButtonDelete">Delete&#8230;</string>
    <string name="NoteButtonOK">Done</string>
    <string name="NotificationHeader">To do:</string>
    <string name="NotificationFormatItem"> %s.</string>
    <string name="RepeatButtonNoEndDate">No End Date</string>
    <string name="RepeatOptionAfterCompleted">After Completed</string>
    <string name="RepeatOptionByDay">Day</string>
    <string name="RepeatOptionByDate">Date</string>
    <string name="RepeatOptionFixedSchedule">Fixed Schedule</string>
    <string name="RepeatTabDaily">Day</string>
    <string name="RepeatTabMonthly">Month</string>
    <string name="RepeatTabNone">None</string>
    <string name="RepeatTabSemiMonthly">Semi</string>
    <string name="RepeatTabWeekly">Week</string>
    <string name="RepeatTabYearly">Year</string>
    <string name="RepeatTextDays">Day(s)</string>
    <string name="RepeatTextEndOn">End on:</string>
    <string name="RepeatTextEvery">Every:</string>
    <string name="RepeatTextNone">Tap one of the above buttons to set a repeat interval.</string>
    <string name="RepeatTextRepeatBy">Repeat By:</string>
    <string name="RepeatTextRepeatOn">Repeat On:</string>
</resources>