<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuShowCompleted"
     android:icon="@drawable/ic_menu_mark"
     android:title="@string/MenuShowCompleted"/>
    <item android:id="@+id/menuSettings"
     android:icon="@android:drawable/ic_menu_preferences"
     android:title="@string/MenuSettings"/>
    <item android:id="@+id/menuInfo"
     android:title="@string/MenuInfo"
     android:icon="@android:drawable/ic_menu_info_details"/>
    <item android:id="@+id/menuExport"
     android:title="@string/MenuExport"
     android:icon="@android:drawable/ic_menu_save"/>
    <item android:id="@+id/menuImport"
     android:title="@string/MenuImport"
     android:icon="@android:drawable/ic_menu_add"/>
    <item android:id="@+id/menuPassword"
     android:title="@string/MenuPasswordSet"
     android:icon="@drawable/ic_menu_login"/>
</menu>
