<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/DatePicker"
  android:background="@color/white"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent"
  android:scrollbars="vertical"
  android:scrollbarAlwaysDrawVerticalTrack="false">
  <LinearLayout android:id="@+id/LinearLayout01"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical">
    <RelativeLayout android:id="@+id/RelativeLayout01"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
	<TextView android:id="@+id/DatePickerTextYear"
	 android:layout_height="wrap_content"
	 android:layout_width="wrap_content"
	 android:layout_centerHorizontal="true"
	 android:layout_centerVertical="true"
	 android:text="2010"
	 android:textColor="@color/black">
	</TextView>
	<Button style="@style/DatePicker.Button.Year"
	 android:id="@+id/DatePickerPriorYearButton"
	 android:layout_toLeftOf="@+id/DatePickerTextYear"
	 android:text="&#9664;">
	</Button>
	<Button style="@style/DatePicker.Button.Year"
	 android:id="@+id/DatePickerNextYearButton"
	 android:layout_toRightOf="@+id/DatePickerTextYear"
	 android:text="&#9654;">
	</Button>
    </RelativeLayout>
    <RadioGroup android:id="@+id/DatePickerMonthRadioGroup"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
	<TableLayout android:id="@+id/TableLayout01"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <TableRow android:id="@+id/TableRow01"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerJanuaryButton"
		 android:text="@string/MonthJan"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerFebruaryButton"
		 android:text="@string/MonthFeb"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerMarchButton"
		 android:text="@string/MonthMar"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerAprilButton"
		 android:text="@string/MonthApr"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerMayButton"
		 android:text="@string/MonthMay"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerJuneButton"
		 android:text="@string/MonthJun"/>
	    </TableRow>
	    <TableRow android:id="@+id/TableRow02"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerJulyButton"
		 android:text="@string/MonthJul"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerAugustButton"
		 android:text="@string/MonthAug"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerSeptemberButton"
		 android:text="@string/MonthSep"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerOctoberButton"
		 android:text="@string/MonthOct"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerNovemberButton"
		 android:text="@string/MonthNov"/>
		<RadioButton style="@style/DatePicker.Button.Month"
		 android:id="@+id/DatePickerDecemberButton"
		 android:text="@string/MonthDec"/>
	    </TableRow>
	</TableLayout>
    </RadioGroup>
    <TableLayout android:id="@+id/TableLayout02"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
	<TableRow android:id="@+id/TableRow03"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <TextView style="@style/DatePicker.Text.Weekday"
	     android:id="@+id/DatePickerTextSunday"
	     android:text="@string/DatePickerSun"/>
	    <TextView style="@style/DatePicker.Text.Weekday"
	     android:id="@+id/DatePickerTextMonday"
	     android:text="@string/DatePickerMon"/>
	    <TextView style="@style/DatePicker.Text.Weekday"
	     android:id="@+id/DatePickerTextTuesday"
	     android:text="@string/DatePickerTue"/>
	    <TextView style="@style/DatePicker.Text.Weekday"
	     android:id="@+id/DatePickerTextWednesday"
	     android:text="@string/DatePickerWed"/>
	    <TextView style="@style/DatePicker.Text.Weekday"
	     android:id="@+id/DatePickerTextThursday"
	     android:text="@string/DatePickerThu"/>
	    <TextView style="@style/DatePicker.Text.Weekday"
	     android:id="@+id/DatePickerTextFriday"
	     android:text="@string/DatePickerFri"/>
	    <TextView style="@style/DatePicker.Text.Weekday"
	     android:id="@+id/DatePickerTextSaturday"
	     android:text="@string/DatePickerSat"/>
	</TableRow>
	<TableRow android:id="@+id/DatePickerWeekRow0"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay01Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay02Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay03Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay04Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay05Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay06Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay07Button"/>
	</TableRow>
	<TableRow android:id="@+id/DatePickerWeekRow1"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay11Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay12Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay13Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay14Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay15Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay16Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay17Button"/>
	</TableRow>
	<TableRow android:id="@+id/DatePickerWeekRow2"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay21Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay22Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay23Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay24Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay25Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay26Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay27Button"/>
	</TableRow>
	<TableRow android:id="@+id/DatePickerWeekRow3"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay31Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay32Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay33Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay34Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay35Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay36Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay37Button"/>
	</TableRow>
	<TableRow android:id="@+id/DatePickerWeekRow4"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay41Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay42Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay43Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay44Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay45Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay46Button"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay47Button"/>
	</TableRow>
	<TableRow android:id="@+id/DatePickerWeekRow5"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay51Button"
	     android:visibility="invisible"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay52Button"
	     android:visibility="invisible"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay53Button"
	     android:visibility="invisible"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay54Button"
	     android:visibility="invisible"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay55Button"
	     android:visibility="invisible"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay56Button"
	     android:visibility="invisible"/>
	    <Button style="@style/DatePicker.Button.Date"
	     android:id="@+id/DatePickerDay57Button"
	     android:visibility="invisible"/>
	</TableRow>
    </TableLayout>
  </LinearLayout>
</ScrollView>
