<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:background="@color/white"
  android:layout_height="fill_parent"
  android:layout_width="fill_parent">
    <CheckBox android:id="@+id/HideCheckBox"
     android:layout_height="wrap_content"
     android:text="@string/HideTextHide"
     android:layout_width="fill_parent"
     android:textColor="@color/black"/>

    <LinearLayout android:id="@+id/LinearLayout01"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
	<EditText android:id="@+id/HideEditDaysEarlier"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:background="@drawable/underline"
	 android:text="99"
	 android:inputType="number"
	 android:ems="2"
	 android:gravity="right"/>
	<TextView android:id="@+id/HideTextDaysEarlier"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:text="@string/HideTextDaysEarlier"
	 android:textColor="@color/black"
	 android:padding="4sp"/>
    </LinearLayout>

    <TextView android:id="@+id/HideTextTime"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_width="wrap_content"
     android:lines="2"
     android:textColor="@color/black"
     android:text="@string/HideTextShow"/>

    <LinearLayout android:id="@+id/LinearLayout02"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent">
	<Button android:id="@+id/HideButtonOK"
	 android:layout_height="wrap_content"
	 android:text="@string/HideButtonOK"
	 android:layout_weight="1"
	 android:layout_width="wrap_content"/>
	<Button android:id="@+id/HideButtonCancel"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:layout_weight="1"
	 android:text="@string/HideButtonCancel"/>
    </LinearLayout>
</LinearLayout>
